--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Dot Aterisk
+title: Dot Asterisk
 email: jpace121@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
  Random thoughts of jpace121.
