--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,9 @@
 title: Dot Asterisk
 email: jpace121@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
- Random thoughts of jpace121.
+ Random thoughts of James Pace.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "www.github.io/jpace121" # the base hostname & protocol for your site
-twitter_username: jpace121
 github_username:  jpace121
 
 # Build settings
