--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Dot Asterisk
 email: jpace121@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
- Random thoughts of James Pace.
+ Random thoughts of jpace121.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "www.github.io/jpace121" # the base hostname & protocol for your site
 github_username:  jpace121
